feat: センサデータ削除機能を追加
